<resources>
    <string name="app_name">E1MDOrtegaDaniel</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="loginButton">Iniciar sesion</string>
    <string name="credits">Creditos</string>
    <string name="credits_name">Author: Daniel Ortega</string>
    <string name="credits_grade">Curso: DAM</string>
    <string name="return_layout">Volver</string>
    <string name="title_activity_credits_main">credits_main</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_logo">App logo</string>
</resources>