<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CreditsActivity">



    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >

        <LinearLayout
            android:id="@+id/whiteLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:minHeight="300dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_logo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_name"
                android:layout_gravity="center"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_grade"
                android:layout_gravity="center"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/buttonReturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/return_layout"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>